# compositionality-study

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: black.yaml  ruff.yaml  tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/compositionality_study/: __init__.py  __main__.py  cli.py  constants.py  utils.py  version.py
src/compositionality_study/data/: __init__.py  characterize_img_comp_ic9600.py  download_coco.py  download_vg.py  preprocess_coco.py  preprocess_vg_coco.py  select_stimuli.py
src/compositionality_study/eda/: __init__.py  captions_statistics.py  explore_statistics.py
src/compositionality_study/experiment/: __init__.py  convert_hf_ds_to_local_files.py  create_fourier_scrambled_images.py  generate_psychopy_files.py
src/compositionality_study/experiment/behavioral/: __init__.py  amt-complexity-task-image.html  amt-complexity-task-text.html  amt-complexity-task.html  complexity-task-image.html  complexity-task-text.html  evaluate_memory_test.py  generate_amt_pairs.py  generate_pairs.py  memory_test.py  process_amt_results.py  process_results.py
src/compositionality_study/experiment/behavioral/memory/: __init__.py  memory_test.py
src/compositionality_study/experiment/behavioral/ratings/: __init__.py  generate_pairs.py  local_experiment.py  process_results.py
src/compositionality_study/experiment/behavioral/ratings/templates/: complete.html  index.html  trial.html
src/compositionality_study/experiment/mri/: __init__.py  check_mriqc.py  convert_hf_ds_to_local_files.py  create_fourier_scrambled_images.py  generate_psychopy_files.py
src/compositionality_study/models/: __init__.py  estimate_betas.py  generate_images_from_text.py  icnet.py  mvpa_decoder.py  post_hoc.py  univariate_analysis.py
src/compositionality_study/visualization/: __init__.py  visualize_brain_maps.py  visualize_selected_stimuli.py  visualize_stimuli_categories.py
tests/: __init__.py  test_version.py
