[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "compositionality-study"
version = "0.0.1-dev"
description = "Code for the fMRI experiment on compositionality in text and images"
authors = [
    { name = "Helena Balabin", email = "helena.balabin@kuleuven.be" }
]
maintainers = [
    { name = "Helena Balabin", email = "helena.balabin@kuleuven.be" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["snekpack", "cookiecutter", "natural language processing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]
dependencies = [
    "nilearn>=0.12.1",
]

[project.urls]
Homepage = "https://github.com//compositionality-study"
Repository = "https://github.com//compositionality-study"
Documentation = "https://compositionality_study.readthedocs.io"
"Bug Tracker" = "https://github.com//compositionality-study/issues"
"Source Code" = "https://github.com//compositionality-study"

[project.scripts]
compositionality_study = "compositionality_study.cli:main"

[tool.poetry]
packages = [
    { include = "compositionality_study", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = "*"
glmsingle = { git = "https://github.com/cvnlab/GLMsingle.git" }
tqdm = "*"
click = "*"
more-click = "*"
loguru = "*"
python-dotenv = "*"
diffusers = "*"
torch = "*"
torchvision = "*"
opencv-python = "*"
pytesseract = "*"
visual-genome = "*"
unidecode = "*"
accelerate = "*"
amrlib = "*"
datasets = ">=2.16.0"
nltk = "*"
penman = "*"
transformers = "*"
spacy = "*"
networkx = "*"
flask = "*"
nibabel = "*"
mriqc = "*"
psmpy = "*"
pybids = "*"
pycocotools = "*"
matplotlib = "*"
matplotlib-label-lines = "*"
seaborn = "*"
spacy-streamlit = "*"
streamlit = "*"
numpy = "<2.0"
scipy = "<2.0"
pandas = "<3.0"
nilearn = ">=0.10,<0.14"
scikit-learn = ">=1.3,<1.9"

[tool.poetry.group.dev.dependencies]
tox = "*"
pytest = "*"
flake8 = "*"
coverage = "*"

[tool.poetry.group.experimental.dependencies]
verstack = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-click = "*"
sphinx-autodoc-typehints = "*"
sphinx-automodapi = "*"

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
psychopy = "*"
wxPython = "*"
pyo = "*"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[tool.coverage.run]
branch = true
source = ["compositionality_study"]
omit = ["tests/*", "docs/*"]

[tool.coverage.paths]
source = [
    "src/compositionality_study",
    ".tox/*/lib/python*/site-packages/compositionality_study"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
