##########################
# Setup.py Configuration #
##########################
[metadata]
name = compositionality_study
version = 0.0.1-dev
description = Code for the preparation and analysis of the planned functional MRI experiment for the Natural Language Processing in the Human Brain PhD project
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com//compositionality-study
download_url = https://github.com//compositionality-study/releases
project_urls =
    Bug Tracker = https://github.com//compositionality-study/issues
    Source Code = https://github.com//compositionality-study

# Author information
author = Helena Balabin
author_email = helena.balabin@kuleuven.be
maintainer = Helena Balabin
maintainer_email = helena.balabin@kuleuven.be

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    natural language processing

[options]
install_requires =
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # Logging
    loguru
    # Basics
    tox
    pytest
    flake8
    python-dotenv
    # NLP specific stuff
    transformers
    datasets
    spacy
    # Graph stuff
    networkx
    # Data analysis
    pandas
    numpy
    scipy
    # Plotting
    matplotlib
    seaborn

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext


[options.entry_points]
console_scripts =
    compositionality_study = compositionality_study.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = compositionality_study
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/compositionality_study
    .tox/*/lib/python*/site-packages/compositionality_study

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    E203  # whitespace before ':'
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    compositionality_study
    tests
